--- a/front/index.html
+++ b/front/index.html
@@ -6,5 +6,21 @@
 </head>
 <body>
     TEST
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.4.0/socket.io.js"></script>
+    <script>
+        const socket = io('http://127.0.0.1:3000', {transport : ['websocket']});
+
+        socket.on('connect', () => {
+            console.log('Connected to server');
+        });
+
+        socket.on('message', (message) => {
+            console.log(`Received message: ${message}`);
+        });
+
+        socket.on('disconnect', () => {
+            console.log('Disconnected from server');
+        });
+    </script>
 </body>
 </html>
