--- a/front/index.html
+++ b/front/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>TEST</title>
+  <title>Connect 4</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <script src="./gameComponent/gameComponent.js"  type="module"></script> -->
+
+  <!-- <script src="./gameChatComponent/gameChatComponent.js"  type="module"></script> -->
+  <!-- <script src="./js/scripts/animator.js" tpye="module"></script> -->
+
+
+  <script src="./js/components/app.js" type="module"></script>
+  <link rel="stylesheet" href="./css/stylesheet.css"/>
+  <link rel="stylesheet" href="./css/animation.css"/>
 </head>
+
 <body>
-    TEST
+  <!-- <script src="./js/components/introMenuComponent/introMenuComponent.js" type="module"></script> -->
+    <!-- <h1>Connect 4</h1>
+    <p>Click on a column to drop a piece.</p> -->
+      <!-- <intro-menu class="intro-menu"></intro-menu> -->
+      <!-- <div style="display: flex">
+        <game-chat></game-chat>
+        <connect-4 playerRed="R" playerYellow="Y" rows="6" columns="7"></connect-4>
+      </div> -->
+
+      <app-component></app-component>
+
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
     <script>
         const socket = io();
