add : back end architecture set in place

--- a/front/index.html
+++ b/front/index.html
@@ -4,13 +4,8 @@
   <title>Connect 4</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <script src="./gameComponent/gameComponent.js"  type="module"></script> -->
-
-  <!-- <script src="./gameChatComponent/gameChatComponent.js"  type="module"></script> -->
-  <!-- <script src="./js/scripts/animator.js" tpye="module"></script> -->
-
-
   <script src="./js/components/app.js" type="module"></script>
+  <link rel="stylesheet" href="./css/resetting-again.css"/>
   <link rel="stylesheet" href="./css/stylesheet.css"/>
   <link rel="stylesheet" href="./css/animation.css"/>
   
@@ -26,12 +21,6 @@
         <game-chat></game-chat>
         <connect-4 playerRed="R" playerYellow="Y" rows="6" columns="7"></connect-4>
       </div> -->
-
       <app-component></app-component>
-
-
-    <script>
-
-    </script>
 </body>
 </html>
