--- a/front/index.html
+++ b/front/index.html
@@ -14,5 +14,6 @@
 </head>
 <body>
       <app-component></app-component>
+      <img class="logo" src="https://cdn.game.tv/game-tv-content/images_3/fb18d4991b4f4112deb57f206a857829/Logo.png"/>
 </body>
 </html>
