--- a/front/index.html
+++ b/front/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Connect 4</title>
   <meta charset="utf-8">
@@ -8,19 +9,11 @@
   <link rel="stylesheet" href="./css/resetting-again.css"/>
   <link rel="stylesheet" href="./css/stylesheet.css"/>
   <link rel="stylesheet" href="./css/animation.css"/>
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 </head>
-
 <body>
-  <!-- <script src="./js/components/introMenuComponent/introMenuComponent.js" type="module"></script> -->
-    <!-- <h1>Connect 4</h1>
-    <p>Click on a column to drop a piece.</p> -->
-      <!-- <intro-menu class="intro-menu"></intro-menu> -->
-      <!-- <div style="display: flex">
-        <game-chat></game-chat>
-        <connect-4 playerRed="R" playerYellow="Y" rows="6" columns="7"></connect-4>
-      </div> -->
       <app-component></app-component>
+      <img class="logo" src="https://cdn.game.tv/game-tv-content/images_3/fb18d4991b4f4112deb57f206a857829/Logo.png"/>
 </body>
 </html>
